# acad-cmd

./: .gitignore  README.md  pyproject.toml  start_server.bat
docs/: tools.json
scripts/: mcp_sanity_acadver.py  mcp_smoketest_stdio.py  selection_prompt_check.py
src/acad_cmd/: __init__.py  autocad_bridge.py  lisp.py  output_log.py  server.py  session_log.py
